# AI4DBCode

./: .dockerignore  .env  .gitignore  CostTraining.py  DQN.py  Dockerfile  ImportantConfig.py  LLM4SchemaOrg_Experimental_Results.ipynb  LatencyTuning.py  PGUtils.py  docker-compose.yml  extract.sh  get-plans.pgsql  get-plans.sparql  launch.sh  pyproject.toml  readme.md  requirements.txt  sage-test.json  sqlSample.py  test.txt  train.py
JOB-queries/sparql/: 10a.sparql  10b.sparql  10c.sparql  11a.sparql  11b.sparql  11c.sparql  11d.sparql  12a.sparql  12b.sparql  12c.sparql  13a.sparql  13b.sparql  13c.sparql  13d.sparql  14a.sparql  14b.sparql  14c.sparql  15a.sparql  15b.sparql  15c.sparql  15d.sparql  16a.sparql  16b.sparql  16c.sparql  16d.sparql  17a.sparql  17b.sparql  17c.sparql  17d.sparql  17e.sparql  17f.sparql  18a.sparql  18b.sparql  18c.sparql  19a.sparql  19b.sparql  19c.sparql  19d.sparql  1c.sparql  1d.sparql  (+72 more)
JOB-queries/sparql-debug/: 11d.sparql  1b.sparql  debug.sparql  relations.txt
JOB-queries/sparql-debug/complex/: 26b.sparql  relations.txt
JOB-queries/sparql-debug/simple/: 1a.sparql  relations.txt
Utils/DB/: Client.py  DBUtils.py  Database.py  Query.py  QueryUtils.py
Utils/Model/: DQN.py  Rewarder.py  TreeLSTM.py
Utils/Parser/: JOBParser.py  parsed_query.py  parser.py
Utils/parser/: JOBParser.py  parser.py
configs/: sage.yaml  sparql.yml  sparql_sage.yml  sparql_virtuoso.yml
docker/: jupyter.Dockerfile
utils/: DBUtils.py  JOBParser.py  TreeLSTM.py  database.py  sqlSample.py
utils/parser/: parsed_query.py  parser.py
